--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -7,10 +7,16 @@
 
 
 .header-login {
-  background-color: rgb(186, 193, 199);
+  background-color: rgb(12, 238, 99);
   box-shadow: 10px 5px 5px #464141;
   border-radius: 15%;
   margin-right:  20px;
   font-size: 18px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.header-chat {
+  border: none;
+  margin: 8px;
+  font-size: 16px;
 }
