--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-direction: column;
     margin-top: 50px;
-    background-color: #c1c1c1;
-    width: 52%;
-    height: 250px;
+    background-color: #029BE4;
+    width: 35%;
+    height: 450px;
     justify-content: space-around;
     align-items: center;
+    border: 1px solid white;
 }
 
 
@@ -18,4 +19,34 @@
 .send-message {
     width: 15%;
     margin-left: 24px;
+}
+.name-icons {
+    width: 36px;
+    position: relative;
+    bottom: 15px;
+    left: 102px;
+    border: none;
+}
+
+.mail-icons{
+    width: 36px;
+    margin: 12px 12px 15px 0px;
+    position: relative;
+    right: 104px;
+}
+
+.phone-icons {
+    width: 36px;
+    position: relative;
+    bottom: 15px;
+    left: 104px;
+}
+
+.close-form {
+    
+    position: relative;
+    bottom: 402px;
+    left: 268px;
+    width: 36px;
+
 }
