--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/public/dofus.svg");
+  background-image: url("/public/dofus.jpg");
    background-size: cover;
    background-repeat: no-repeat;
   
