--- a/src/Components/Vente-Kamas/sendkamas.css
+++ b/src/Components/Vente-Kamas/sendkamas.css
@@ -1,6 +1,9 @@
 .dofus2{
-    width: 20%;
+    width: 15%;
     margin: 15px;
+    position: relative;
+    bottom: 40px;
+    left: 190px;
     
 }
 
@@ -8,7 +11,8 @@
     display: flex;
     flex-direction: row;
     margin-top: 50px;
-    background-color: aliceblue;
+    background-image: url('/public/ventek.png');
+    background-repeat: no-repeat;
     justify-content: space-evenly;
     align-items: baseline;
     align-content: center;
@@ -19,9 +23,10 @@
 .button-kamas{
     
     position: relative;
-    top: 50px;
-    right: 225px;
-    height: 5%;
+    right: 260px;
+    left: 2px;
+    top: 190px;
+    height: 8%;
     margin: 5px;   
     font-family:Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -30,9 +35,9 @@
 
 .button-retro{
     position: relative;
-    right: 240px;
-    top: 50px;
-    height: 5%;
+    left: 340px;
+    top: 200px;
+    height: 8%;
     /* margin: 0px 0px 20px 5px; */
     font-family:Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -40,5 +45,101 @@
 }
 
 .dofus-retro {
-    width: 25%;
+    width: 24%;
+    position: relative;
+    top: 30px;
+    left: 600px;
+
+    
 }
+
+.modal{
+    border: 1px solid black;
+    position: absolute;
+    left: 22%;
+    bottom: 65%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    flex-direction: row;
+    z-index: 1;
+    background-color: rgba(222, 230, 236, 0.637);
+    width: 60%;
+
+    
+
+}
+
+.description-modal{
+    font-size:23px;
+    font-style: italic;
+    font-family: sans-serif;
+    margin: 5px;
+   
+
+}
+
+.confirm-modal,.cancel-modal {
+    margin-top: 20px;
+    margin-bottom: 15px;
+    width: 12%;
+    border-radius: 15%;
+    background-color: rgba(35, 172, 47, 0.918);
+}
+
+@media screen and (max-width: 1669px){
+    .dofus-retro  {
+      width: 10%;
+      position: fixed;
+      top: 400px;
+      left: 950px
+  
+  }
+    
+  }
+
+  @media screen and (max-width: 1669px){
+    .dofus-retro  {
+      width: 10%;
+      position: fixed;
+      top: 400px;
+      left: 950px
+  
+  }
+  .dofus2 {
+      position: fixed;
+      width: 8%;
+      bottom: 350px;
+      left: 290px;
+  }
+    
+  }
+  
+  @media screen and (max-width: 1300px){
+    .dofus-retro  {
+      width: 10%;
+      position: fixed;
+      top: 420px;
+      left: 950px
+  
+  }
+  .dofus2 {
+    position: fixed;
+    width: 8%;
+    bottom: 370px;
+    left: 290px;
+}
+    
+  }
+  
+  @media screen and (max-width: 1100px){
+    .dofus-retro  {
+      width: 10%;
+      position: fixed;
+      top: 430px;
+      left: 980px;
+  
+  }
+    
+  }
+  
