--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,17 +1,18 @@
 .header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 
 
 
 .header-login {
+ 
   background-color: rgb(12, 238, 99);
   box-shadow: 10px 5px 5px #464141;
   border-radius: 15%;
   margin-right:  20px;
-  font-size: 18px;
+    font-size: 18px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -19,4 +20,39 @@
   border: none;
   margin: 8px;
   font-size: 16px;
+}
+
+.login{
+  position: absolute;
+  top: 10%; 
+  left: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  border: 1px solid black;
+  height: 350px;
+  width: 550px;
+  background-color: rgba(45, 78, 107, 0.596);
+}
+
+.btn-log{
+ 
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 20px;
+  height: 25px;
+  width: 24%;
+}
+
+.send-log{
+  margin-right: 32px;
+}
+
+.login-modal{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
