--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -1,52 +1,92 @@
 .form-contact {
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
-    background-color: #029BE4;
-    width: 35%;
-    height: 450px;
-    justify-content: space-around;
-    align-items: center;
-    border: 1px solid white;
+  margin: 0 auto;
+  display: flex;
+  background-color: #029be4;
+  width: 500px;
+  height: 400px;
+  align-items: center;
+  border: 1px solid white;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
-
-
 .message-form {
-  margin-right: 50px;  
+  margin-right: 50px;
 }
 
 .send-message {
-    width: 15%;
-    margin-left: 24px;
+  width: 15%;
+  margin-left: 24px;
 }
 .name-icons {
-    width: 36px;
-    position: relative;
-    bottom: 15px;
-    left: 102px;
-    border: none;
+  width: 36px;
+  position: relative;
+  bottom: 15px;
+  left: 102px;
+  border: none;
 }
 
-.mail-icons{
-    width: 36px;
-    margin: 12px 12px 15px 0px;
-    position: relative;
-    right: 104px;
+.mail-icons {
+  width: 36px;
+  margin: 12px 12px 15px 0px;
+  position: relative;
+  right: 104px;
 }
 
 .phone-icons {
-    width: 36px;
-    position: relative;
-    bottom: 15px;
-    left: 104px;
+  width: 36px;
+  position: relative;
+  bottom: 15px;
+  left: 104px;
 }
 
-.close-form {
-    
-    position: relative;
-    bottom: 402px;
-    left: 268px;
-    width: 36px;
+/* .close-form {
+  position: relative;
+  bottom: 402px;
+  left: 268px;
+  width: 36px;
+} */
 
+@media screen and (min-width: 1024px) {
+ .form-contact {
+  display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    align-content: space-between; 
+    width: 500px;
+}
+.close-form{
+ display: block;
+ margin-left: 470px;
+ 
+}
+
+.send-message {
+  margin-bottom: 20px;
+}
+
+}
+
+@media screen and (min-width: 768px) and (max-width:1023px) {
+  .form-contact {
+    position: absolute;
+    top: 40px;
+    right: 10px;
+     display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      align-content: space-between; 
+      width: 500px;
+  }
+  .close-form{
+    display: block;
+    margin-left: 470px;
+    
+   }
+   
+   .send-message {
+     margin-bottom: 20px;
+   }
 }
