--- a/src/Components/Vente-Kamas/sendkamas.css
+++ b/src/Components/Vente-Kamas/sendkamas.css
@@ -7,23 +7,18 @@
 }
 
 .send-kamas {
-  display: flex;
-  flex-direction: row;
-  margin-top: 50px;
+  position: fixed;
   background-image: url("/public/ventek.png");
   background-repeat: no-repeat;
-  justify-content: space-evenly;
-  align-items: baseline;
-  align-content: center;
-  width: 52%;
-  height: 465px;
+  background-size: 450px;
+ 
 }
 
 .button-kamas {
   position: relative;
   right: 260px;
-  left: 2px;
-  top: 200px;
+  left: 90px;
+  top: 245px;
   height: 8%;
   width: 13%;
   border-radius: 8%;
@@ -35,10 +30,10 @@
 
 .button-retro {
   position: relative;
-  left: 340px;
-  top: 200px;
+  left: 460px;
+  top: 245px;
   height: 8%;
-  width: 13%;
+  width: 16%;
   border-radius: 8%;
   color: rgb(99, 78, 78);
   /* margin: 0px 0px 20px 5px; */
@@ -83,50 +78,27 @@
   background-color: rgba(35, 172, 47, 0.918);
 }
 
-@media screen and (max-width: 1669px) {
-  .dofus-retro {
-    width: 10%;
-    position: fixed;
-    top: 400px;
-    left: 950px;
-  }
+
+
+
+@media screen and (min-width: 1024px){
+
+  body {
+  background-image: none;
+}
+.send-kamas{
+  
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+
 }
 
-@media screen and (max-width: 1669px) {
-  .dofus-retro {
-    width: 10%;
-    position: fixed;
-    top: 400px;
-    left: 950px;
-  }
-  .dofus2 {
-    position: fixed;
-    width: 8%;
-    bottom: 350px;
-    left: 290px;
-  }
+.container-dofus1 {
+  
+  background-image: url('./ventek.png');
+  background-repeat: no-repeat;
+  background-size: 350px;
 }
-
-@media screen and (max-width: 1300px) {
-  .dofus-retro {
-    width: 10%;
-    position: fixed;
-    top: 420px;
-    left: 950px;
-  }
-  .dofus2 {
-    position: fixed;
-    width: 8%;
-    bottom: 370px;
-    left: 290px;
-  }
-}
-
-@media screen and (max-width: 1100px) {
-  .dofus-retro {
-    width: 10%;
-    position: fixed;
-    top: 430px;
-    left: 980px;
-  }
+   
 }
