--- a/src/Components/Vente-Kamas/sendkamas.css
+++ b/src/Components/Vente-Kamas/sendkamas.css
@@ -1,17 +1,14 @@
 .dofus2 {
   width: 15%;
   margin: 15px;
-  position: relative;
+  position: absolute;
   bottom: 40px;
   left: 190px;
 }
 
-.send-kamas {
-  position: fixed;
-  background-image: url("/public/ventek.png");
-  background-repeat: no-repeat;
-  background-size: 450px;
- 
+.plateforme-2 {
+  /* position: fixed; */
+  width: 30%;
 }
 
 .button-kamas {
@@ -36,13 +33,13 @@
   width: 16%;
   border-radius: 8%;
   color: rgb(99, 78, 78);
-  /* margin: 0px 0px 20px 5px; */
+
   font-family: Arial, Helvetica, sans-serif;
   font-size: 22px;
   background-color: rgb(9, 238, 161);
 }
 
-.dofus-retro {
+.dofus-retro-img {
   width: 24%;
   position: relative;
   top: 30px;
@@ -50,6 +47,7 @@
 }
 
 .modal {
+  
   border: 1px solid black;
   position: absolute;
   left: 22%;
@@ -78,27 +76,72 @@
   background-color: rgba(35, 172, 47, 0.918);
 }
 
+.send-kamas {
+  position: relative;
+}
 
-
-
-@media screen and (min-width: 1024px){
-
+@media screen and (min-width: 1024px) {
   body {
-  background-image: none;
-}
-.send-kamas{
-  
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-
-}
-
-.container-dofus1 {
-  
-  background-image: url('./ventek.png');
-  background-repeat: no-repeat;
-  background-size: 350px;
-}
+    background-image: none;
+    background-color: rgb(21, 43, 43);
    
+
+  }
+
+  .modal {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    position: fixed;
+    justify-content: space-evenly;
+    top: 100px;
+  }
+
+  .send-kamas {
+    position: fixed;
+    background-image: url("./ventek.png");
+    background-repeat: no-repeat;
+    background-size: 350px;
+    height: 100%;
+    width: 100%;
+    top: 450px;
+  }
+  .dofus-retro{
+    position: fixed;
+    background-image: url("./ventek.png");
+    background-repeat: no-repeat;
+    background-size: 350px;
+    left: 700px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .dofus2 {
+    position: fixed;
+    top: 390px;
+    left: 105px;
+    bottom: 0;
+    width: 100px;
+  }
+
+  .dofus-retro-img {
+    position: fixed;
+    width: 130px;
+    top: 425px;
+    left: 820px;
+  }
+
+  .button-retro{
+    position: fixed;
+    top: 800px;
+    left: 800px;
+    width: 150px;
+  }
+
+  .button-kamas {
+    position: fixed;
+    top: 800px;
+    width: 160px;
+  }
 }
