--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ table {
  
   
 body {
-  background-image: url('/public/dofus_bg.jpeg');
+  background-image: url('/public/img/background-dofus.jpeg');
   background-size: cover;
   background-repeat: no-repeat;
 }
